@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-09-17T08:30:33Z",
+  "timestamp" : "2022-09-17T16:34:16Z",
   "count_outdated" : 785,
   "uniques_outdated" : 410,
-  "count" : 804,
+  "count" : 805,
   "uniques" : 422,
   "clones" : [
     {
@@ -84,8 +84,8 @@
     },
     {
       "timestamp": "2022-09-17T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
