@@ -1,3 +1,11 @@
+2022-09-17T16:34:16Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3074037908
+* notice: last 14d: unq all: 2 20
+* notice: prev accum: outdated-unq outdated-all / unq all: 410 785 / 422 804
+* notice: next accum: outdated-unq outdated-all / unq all: 410 785 / 422 805
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-09-17]
+
 2022-09-17T08:30:33Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3072707677
 * notice: last 14d: unq all: 2 19
